--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"engines": {
+		"node": "18.x"
+	},
 	"scripts": {
 		"build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
 		"build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
