--- a/package.json
+++ b/package.json
@@ -11,42 +11,44 @@
 		"build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
 		"dev": "cross-env NODE_ENV=development CLIENT_ID=hM5Xz-Jqngvv7rzwkr1bWw node ./bin/dev.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node ./dist/server/server.js"
+		"start": "cross-env CLIENT_ID=hM5Xz-Jqngvv7rzwkr1bWw node ./dist/server/server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/react-redux": "^7.1.26",
-		"@types/react-router-dom": "^5.3.3",
-		"axios": "^1.4.0",
-		"classnames": "^2.3.2",
-		"express": "^4.18.2",
-		"nodemon": "^2.0.22",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-hook-form": "^7.46.1",
-		"react-redux": "^8.1.2",
-		"react-router-dom": "^6.16.0",
-		"redux": "^4.2.1",
-		"redux-devtools-extension": "^2.13.9",
-		"redux-thunk": "^2.4.2",
-		"webpack-node-externals": "^3.0.0",
 		"@hot-loader/react-dom": "^17.0.1",
 		"@types/classnames": "^2.3.1",
 		"@types/enzyme": "^3.10.13",
 		"@types/jest": "^29.5.2",
 		"@types/react": "^17.0.62",
 		"@types/react-dom": "^18.2.6",
+		"@types/react-redux": "^7.1.26",
+		"@types/react-router-dom": "^5.3.3",
 		"@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+		"axios": "^1.4.0",
+		"classnames": "^2.3.2",
 		"clean-webpack-plugin": "^4.0.0",
+		"compression": "^1.7.4",
 		"cross-env": "^7.0.3",
 		"css-loader": "^3.4.2",
 		"enzyme": "^3.11.0",
 		"enzyme-to-json": "^3.6.2",
+		"express": "^4.18.2",
+		"helmet": "^7.0.0",
 		"html-webpack-plugin": "^4.5.2",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.5.0",
+		"nodemon": "^2.0.22",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-hook-form": "^7.46.1",
 		"react-hot-loader": "^4.13.0",
+		"react-redux": "^8.1.2",
+		"react-router-dom": "^6.16.0",
+		"recoil": "^0.7.7",
+		"redux": "^4.2.1",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.2",
 		"sass": "^1.63.4",
 		"sass-loader": "^10.4.1",
 		"style-loader": "^1.1.3",
@@ -57,7 +59,7 @@
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-middleware": "^3.7.3",
 		"webpack-dev-server": "^3.10.3",
-		"webpack-hot-middleware": "^2.25.0"
-	},
-	"devDependencies": {}
+		"webpack-hot-middleware": "^2.25.0",
+		"webpack-node-externals": "^3.0.0"
+	}
 }
